--- a/app/src/main/res/layout/fragment_pay_info_guaimao.xml
+++ b/app/src/main/res/layout/fragment_pay_info_guaimao.xml
@@ -19,7 +19,10 @@
             android:layout_width="match_parent"
             android:layout_height="110dp"
             android:orientation="vertical">
-
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
             <TextView
                 android:id="@+id/tv_pay_info_product_name_guaimao"
                 android:layout_width="match_parent"
@@ -30,7 +33,23 @@
                 android:textSize="20sp"
                 android:textStyle="bold"
                 tools:text="西亭脆饼" />
+                <RelativeLayout
+                    android:id="@+id/rl_close_gm"
+                    android:layout_width="45dp"
+                    android:layout_height="35dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:gravity="right">
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="20dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="20dp"
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/ic_new_close" />
+                </RelativeLayout>
 
+            </RelativeLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
