--- a/app/src/main/res/layout/fragment_new_bind_id.xml
+++ b/app/src/main/res/layout/fragment_new_bind_id.xml
@@ -135,6 +135,19 @@
                 android:textSize="15sp"
                 android:textStyle="bold"/>
 
+            <TextView
+                android:layout_marginLeft="20dp"
+                android:id="@+id/tv_bind_id_btn_skip"
+                style="@style/ShortGreyBorderButton_guaimao"
+                android:gravity="center"
+                android:layout_width="120dp"
+                android:layout_height="40dp"
+                android:textColor="#000"
+                android:layout_alignParentBottom="true"
+                android:text="暂时跳过"
+                android:textSize="15sp"
+                />
+
         </LinearLayout>
 
     </LinearLayout>
