--- a/docs/resource/res/layout/fragment_pay_info_guaimao.xml
+++ b/docs/resource/res/layout/fragment_pay_info_guaimao.xml
@@ -23,16 +23,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
-            <TextView
-                android:id="@+id/tv_pay_info_product_name_guaimao"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:gravity="center"
-                android:textColor="#F59A23"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                tools:text="西亭脆饼" />
+                <TextView
+                    android:id="@+id/tv_pay_info_product_name_guaimao"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:gravity="center"
+                    android:textColor="#F59A23"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    tools:text="西亭脆饼" />
                 <RelativeLayout
                     android:id="@+id/rl_close_gm"
                     android:layout_width="45dp"
@@ -127,6 +127,13 @@
             android:paddingTop="10dp">
 
             <View style="@style/HorizontalLine_guaimao" />
+            <com.game.sdk.reconstract.views.PayChannelItemView
+                android:id="@+id/piv_pay_info_channel_item_sandboxPay_guaimao"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                attr:viewTypeGuaimao="0"
+                android:visibility="gone"
+                />
 
             <com.game.sdk.reconstract.views.PayChannelItemView
                 android:id="@+id/piv_pay_info_channel_item_alipay_guaimao"
