--- a/app/src/main/res/drawable/bg_dialog_select_photo.xml
+++ b/app/src/main/res/drawable/bg_dialog_select_photo.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <corners android:radius="5dp" />
+    <corners android:topLeftRadius="10dp" android:topRightRadius="10dp" />
 
-    <solid android:color="#FFFD9E0E" />
+    <solid android:color="#fff" />
+
 </shape>
