--- a/docs/resource/res/layout/fragment_webview_gm.xml
+++ b/docs/resource/res/layout/fragment_webview_gm.xml
@@ -18,6 +18,7 @@
 
 
         <RelativeLayout
+            android:id="@+id/webview_ll_title"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="#ff8a00"
