--- a/app/src/main/res/values/gmstyles.xml
+++ b/app/src/main/res/values/gmstyles.xml
@@ -273,4 +273,12 @@
         <item name="android:textColor">@color/color_tips_text_gm</item>
     </style>
 
+    <style name="Theme.ActivityDialogStyle" parent="@android:style/Theme.NoTitleBar">
+        <!--背景透明-->
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <!--dialog的整个屏幕的背景是否有遮障层-->
+        <item name="android:backgroundDimEnabled">true</item>
+    </style>
+
 </resources>
