--- a/docs/resource/res/layout/fragment_new_login_entrance_register.xml
+++ b/docs/resource/res/layout/fragment_new_login_entrance_register.xml
@@ -27,6 +27,16 @@
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
+            <ImageView
+                android:id="@+id/fragment_login_entrance_iv_kf"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/ic_new_customer" />
+
         </RelativeLayout>
 
         <LinearLayout
