--- a/docs/resource/res/layout/gm_new_view_login_protocol.xml
+++ b/docs/resource/res/layout/gm_new_view_login_protocol.xml
@@ -46,7 +46,7 @@
             android:layout_marginLeft="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="用户服务协议"
+            android:text="用户服务协议、隐私协议"
             android:background="@drawable/gm_text_underline"
             android:textColor="@color/color_protocol_agree" />
 
