--- a/docs/resource/res/values/gmdimens.xml
+++ b/docs/resource/res/values/gmdimens.xml
@@ -42,4 +42,22 @@
     <dimen name="gm_sdk_main_function_item_new_tips_height">8dp</dimen>
     <dimen name="gm_sdk_general_title_bar_height">43dp</dimen>
 
+
+    <dimen name="default_ev_border_width">0.7dp</dimen>
+    <dimen name="default_ev_border_radius">3dp</dimen>
+
+    <dimen name="default_ev_password_width">10dp</dimen>
+    <dimen name="default_ev_password_radius">3dp</dimen>
+    <dimen name="default_input_text_view_size">48dp</dimen>
+    <dimen name="default_input_text_view_padding">22dp</dimen>
+    <dimen name="default_input_text_size">20dp</dimen>
+    <integer name="default_ev_password_length">4</integer>
+
+    <dimen name="custom_ev_border_width">10dp</dimen>
+    <dimen name="custom_ev_border_radius">10dp</dimen>
+    <dimen name="custom_ev_password_width">10dp</dimen>
+    <dimen name="captcha_cursor_height">30dp</dimen>
+    <dimen name="captcha_cursor_width">1dp</dimen>
+
+
 </resources>
